# mariaNB

./: README.md  pyproject.toml  requirements.txt  setup.sh  test.ipynb
src/marianb/: __init__.py  connection.py  dataframe.py  magic.py  vector.py
